# skaro

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.ps1  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
.skaro/: config.yaml  secrets.yaml
build_hooks/: frontend_hook.py
docs/: methodology.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/api/: cache.js  client.js
frontend/src/lib/i18n/: en.js  index.js  ru.js
frontend/src/lib/layout/: BottomPanel.svelte  ErrorPane.svelte  LogPane.svelte  Sidebar.svelte  StatusBar.svelte  Toolbar.svelte
frontend/src/lib/pages/: AboutPage.svelte  AdrPage.svelte  ArchitecturePage.svelte  ConstitutionPage.svelte  DashboardPage.svelte  DevPlanPage.svelte  FeatureDetailPage.svelte  FeaturePage.svelte  FeaturesPage.svelte  GitPage.svelte  ReviewPage.svelte  SettingsPage.svelte  StatsPage.svelte  TasksPage.svelte
frontend/src/lib/pages/architecture/: ArchActions.svelte  ProposedArchitecture.svelte
frontend/src/lib/stores/: logStore.js  statusStore.js  themeStore.js
frontend/src/lib/ui/: ChatMessage.svelte  CheckList.svelte  CommandItem.svelte  CommandList.svelte  DiffModal.svelte  FileTabs.svelte  FileTypesChart.svelte  FixChat.svelte  KittIndicator.svelte  MarkdownContent.svelte  PhaseBar.svelte  ProviderSelect.svelte  ScopeModal.svelte  StatsTable.svelte  TestsSummary.svelte  testUtils.js
frontend/src/lib/utils/: diff.js  format.js  markdown.js  portal.js  useAsync.svelte.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/adr/: +page.svelte
frontend/src/routes/analytics/: +page.svelte
frontend/src/routes/architecture/: +page.svelte
frontend/src/routes/cicd/: +page.svelte
frontend/src/routes/constitution/: +page.svelte
frontend/src/routes/devplan/: +page.svelte
frontend/src/routes/feature/: +page.svelte
frontend/src/routes/features/: +page.svelte
frontend/src/routes/git/: +page.svelte
frontend/src/routes/review/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/tasks/: +page.svelte
src/skaro_cli/: __init__.py  main.py
src/skaro_core/: __init__.py  i18n.py  providers.yaml
src/skaro_core/artifacts/: __init__.py  _architecture.py  _base.py  _constitution.py  _devplan.py  _features.py  _helpers.py  _milestones.py  _models.py  _state.py  _tasks.py
src/skaro_core/config/: __init__.py  _io.py  _models.py  _secrets.py  _token_tracking.py
src/skaro_core/llm/: __init__.py  anthropic_adapter.py  base.py  deepseek_adapter.py  google_adapter.py  groq_adapter.py  ollama_adapter.py  openai_adapter.py  openrouter_adapter.py  qwen_adapter.py  zai_adapter.py
src/skaro_core/locales/: en.yaml  ru.yaml
src/skaro_core/phases/: __init__.py  _clarify_parser.py  _command_runner.py  _devplan_parser.py  _devplan_prompts.py  _fix_base.py  _plan_utils.py  analytics.py  architecture.py  base.py  cicd.py  clarify.py  devplan.py  feature.py  fix.py  implement.py  plan.py  project_fix.py  project_review.py  tests.py
src/skaro_core/prompts/: adr-generate.md  analytics.md  architecture-apply.md  architecture-chat.md  architecture-generate.md  architecture.md  cicd.md  clarify.md  constitution-populate.md  devplan-update.md  devplan.md  feature-analyze.md  implement.md  plan.md  requirement-from-text.md  requirements-generate.md  requirements-review.md  review.md  ts-clean.md  ts-review.md
src/skaro_core/skills/: __init__.py  loader.py  models.py
src/skaro_web/: __init__.py  app.py
src/skaro_web/api/: __init__.py  analytics.py  architecture.py  config.py  constitution.py  deps.py  devplan.py  feature.py  files.py  git.py  review.py  schemas.py  skills.py  status.py  tasks.py
src/skaro_web/static/: index.html
src/skaro_web/static/_app/: version.json
templates/constitution-presets/: django.md  express.md  fastapi.md  flutter.md  nestjs.md  nextjs.md  react-native.md  react.md  sveltekit.md  vue.md
templates/skills/: _registry.yaml  angular-architecture.yaml  angular-testing.yaml  django-patterns.yaml  django-testing.yaml  express-patterns.yaml  express-testing.yaml  fastapi-endpoints.yaml  fastapi-sqlalchemy.yaml  flutter-architecture.yaml  flutter-testing.yaml  kotlin-mp-architecture.yaml  kotlin-mp-testing.yaml  nestjs-architecture.yaml  nestjs-testing.yaml  nextjs-app-router.yaml  nodejs-backend.yaml  pytest-patterns.yaml  python-standards.yaml  react-components.yaml  react-native-patterns.yaml  react-native-testing.yaml  react-state.yaml  react-testing.yaml  svelte-patterns.yaml  svelte-testing.yaml  typescript-strict.yaml  vue-composition.yaml  vue-testing.yaml
tests/: __init__.py  conftest.py  test_api.py  test_architecture_devplan.py  test_artifacts.py  test_config.py  test_deps.py  test_devplan_parser.py  test_i18n.py  test_llm_base.py  test_parsers.py  test_phases.py  test_skills.py  test_validation.py
(+227 files in other folders)
